--- a/setup.sty
+++ b/setup.sty
@@ -12,6 +12,7 @@
 \usepackage{cancel}
 \usepackage{amsmath}
 \usepackage{csquotes}
+\usepackage{gensymb}
 \usepackage{forest}
 \usepackage{amsthm}
 \usepackage{amssymb}
