--- a/Second Year/Reti di Calcolatori/EserciziReti.tex
+++ b/Second Year/Reti di Calcolatori/EserciziReti.tex
@@ -439,9 +439,9 @@ Quindi:
 Tre lan con i seguenti vincoli sul numero di host:
 
 \begin{itemize}
-    \item 400
-    \item 300
-    \item 1200
+    \item LAN1: 400
+    \item LAN2: 300
+    \item LAN3: 1200
 \end{itemize}
 
 La LAN1 contiene un host con indirizzo 178.242.85.168
@@ -452,7 +452,36 @@ La LAN1 contiene un host con indirizzo 178.242.85.168
     \item Tabella di Routing del Router A considerando come metrica il numero di Hop
     e assumendo che il router X abbia annunciato di raggiungere tutti gli host su internet con 5 hop
 \end{itemize}
+Ora vediamo quanti bit ci servono per indirizzare l'intera rete:
+\begin{itemize}
+    \item LAN 1 \# host = 400 $\rightarrow$ $400 < 2^9$ $\rightarrow$ 9 bit
+    \item LAN 2 \# host = 300 $\rightarrow$ $300< 2^9$ $\rightarrow$ 9 bit
+    \item LAN 3 \# host = 1200 $\rightarrow$ $1200 < 2^{10}$ $\rightarrow$ 10 bit
+    \item TOTALE \# host = 1900 $\rightarrow$ $2^9 < 1900 < 2^{12}$ $\rightarrow$ 12 bit (11 bit non sarebbero abbastanza)
+\end{itemize}
+Sappiamo che il blocco CIDR totale è 12 bit. Utilizzando l'indirizzo di rete della LAN1 possiamo calcolare gli indirizzi di rete per le altre LAN.
+\\
+Blocco CIDR totale:
+\[\overbrace{\colorbox{blue!30!white}{1011 0010}}^{178} \; \; \overbrace{\colorbox{blue!30!white}{1111 0010}}^{242} \; \; \overbrace{\colorbox{blue!30!white}{0101}0000}^{80} \; \; \overbrace{00000000}^{0} \Longrightarrow 178.242.80.0/20\]
+Per la \textbf{LAN 1}, abbiamo bisogno di 9 bit. Quindi, il blocco CIDR per la LAN 1 sarà (seguendo le indicazioni date dal testo dell'esercizio dove la LAN1 contiene l'indirizzo $178.242.85.156$):
+\[\overbrace{\colorbox{blue!30!white}{1011 0010}}^{178} \; \; \overbrace{\colorbox{blue!30!white}{1111 0010}}^{242} \; \; \overbrace{\colorbox{blue!30!white}{0101}\colorbox{green!30!white}{010}0}^{84} \; \; \overbrace{00000000}^{0} \Longrightarrow 178.242.84.0/23\]
+Per la \textbf{LAN 3} abbiamo bisogno di 11 bit. Quindi, il blocco CIDR per la LAN 3 sarà:
+\[\overbrace{\colorbox{blue!30!white}{1011 0010}}^{178} \; \; \overbrace{\colorbox{blue!30!white}{1111 0010}}^{242} \; \; \overbrace{\colorbox{blue!30!white}{0101}\colorbox{green!30!white}{1}000}^{88} \; \; \overbrace{00000000}^{0} \Longrightarrow 178.242.88.0/21\]
+Per la \textbf{LAN 2} abbiamo bisogno di 9 bit. Quindi, il blocco CIDR per la LAN 2 sarà:
+\[\overbrace{\colorbox{blue!30!white}{1011 0010}}^{178} \; \; \overbrace{\colorbox{blue!30!white}{1111 0010}}^{242} \; \; \overbrace{\colorbox{blue!30!white}{0101}\colorbox{green!30!white}{000}0}^{80} \; \; \overbrace{00000000}^{0} \Longrightarrow 178.242.80.0/21\]
 
+La tabella di routing del ROUTER A:
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{c|c|c}
+        \textbf{Destinazione} & \textbf{Next Hop} & \textbf{Costo} \\ \hline
+        $X$ & $X$ & 1 \\
+        $B$ & $B$ & 1 \\
+        $C$ & $X$ & 2 \\
+        Internet & $X$ & 6 \\
+    \end{tabular}
+\end{table}
 
 \end{document}
 
